# thai-smartcard

./: .gitignore  Cargo.toml  Cross.toml  README.md  build.rs  index.ts  package-lock.json  package.json  thai-id-adapter.ts  thai-smartcard.darwin-x64.node
.cargo/: config.toml
.github/workflows/: release.yml
scripts/: build-all.sh
src/: card.rs  lib.rs  reader.rs  types.rs  utils.rs
