[package]
name = "thai-smartcard"
version = "1.0.0"
edition = "2021"
license = "MIT"
description = "High-performance Smart Card Reader library - Native Rust bindings for PC/SC. Supports all smart card types."

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2.15", default-features = false, features = ["napi8", "tokio_rt"] }
napi-derive = "2.15"
pcsc = "2.0"
tokio = { version = "1.0", features = ["rt", "rt-multi-thread", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
napi-build = "2.3"

